Estilizar search bar

--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -30,19 +30,9 @@ header{
     align-items: center;
 }
 
-#search{
-    text-align: center;
-    width: 60%;
-}
-
-#search input{
-    height: 4vh;
-    width: 90%;
-    text-align: center;
-}
 
 #icone{
-    width: 20%;
+    width: 25%;
     text-align: center;
 }
 
@@ -52,12 +42,18 @@ header{
 }
 
 #botões{
-    width: 20%;
+    width: 25%;
     text-align: end;
+}
+
+#botões img{
+    width: calc(3vmax + 15px);
 }
 
 #botões button{
     margin-right: 10px;
+    background-color: transparent;
+    border: none;
 }
 
 
@@ -139,6 +135,80 @@ footer p{
     flex-direction: row;
     flex-shrink: 0;
 }#postResult a{color: var(--main-brand);}
+
+/* SEARCH BAR */
+
+#search{
+    width: 50%;
+}
+
+.input-box {
+    position: relative;
+    height: 76px;
+    max-width: 55%;
+    width: 100%;
+    background: var(--dark-shades);
+    margin: 0 20px;
+    border-radius: 8px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  }
+  .input-box i,
+  .input-box .button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .input-box i {
+    left: 20px;
+    font-size: 30px;
+    color: var(--dark-shades);
+  }
+  .input-box input {
+    height: 100%;
+    width: 75%;
+    outline: none;
+    font-size: 18px;
+    font-weight: 400;
+    border: none;
+    padding: 0 155px 0 65px;
+    color: var(--light-shades);
+    background-color: transparent;
+  }
+  
+  .input-box .button {
+    right: 20px;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--light-shades);
+    border: none;
+    padding: 12px 30px;
+    border-radius: 6px;
+    background-color: var(--main-brand);
+    cursor: pointer;
+  }
+  .input-box .button:active {
+    transform: translateY(-50%) scale(0.98);
+  }
+
+  /* Responsive */
+  @media screen and (max-width: 500px) {
+    .input-box {
+       height: 66px;
+       margin: 0 8px;
+    }
+    .input-box i {
+       left: 12px;
+       font-size: 25px;
+    }
+    .input-box input {
+       width: 80%;
+       padding: 0 0vmax 0 3vmax;
+       font-size: calc(1vmax + 5px);
+    }
+    .input-box .button {
+       display: none;
+    }
+  }
 
 /* RESPONSIVIDADE */
 
