--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 11vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
