--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -317,7 +317,7 @@ html{
 
 /* Posts */
 
-#boxPostsDoUser{
+#posts{
     background-color: var(--main-brand);
     width: -webkit-fill-available;
     /* height: 100%; */
@@ -326,6 +326,7 @@ html{
     flex-direction: column;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+    word-wrap: break-word;
 
     padding: 3%;
     margin-right: 2.2%;
@@ -337,17 +338,17 @@ html{
 }
 
 
-#boxPostsDoUser::-webkit-scrollbar { /* corrigir scroll bar aqui e la em baixo*/
+#posts::-webkit-scrollbar { /* corrigir scroll bar aqui e la em baixo*/
     width: 11px;
 }
 
 
-#boxPostsDoUser::-webkit-scrollbar-thumb {
+#posts::-webkit-scrollbar-thumb {
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
 }
 
-.postResult{
+#postResult{
     max-height: 80%;
     /* margin-bottom: 30px; */
     border-radius: 0.9vmax;
@@ -473,7 +474,7 @@ html{
         margin-bottom: 3%;
     }
 
-    #boxPostsDoUser{
+    #posts{
         padding-bottom: 10%;
     }
 }
