--- a/styles/styleGenerico.css
+++ b/styles/styleGenerico.css
@@ -9,7 +9,7 @@
 }
 
 /* consertar especificidades */
-.postResult{
+#postResult{
     background-color: var(--light-shades);
     border-radius: 10px;
     color: var(--dark-shades);
@@ -19,6 +19,16 @@
     padding-bottom: 3%;
 }
 
-.postResult a{
+#postResult a{
     color: var(--main-brand);
+}
+
+.Oculto{
+  display: none;
+}
+
+button{
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
