--- a/styles/loginStyle.css
+++ b/styles/loginStyle.css
@@ -1,7 +1,7 @@
 :root{
     --light-shades: #e8e8e8;
     --light-accent: #e6b4b4;
-    --main-brand: #dc143c;
+    --main-brand: #a01111;
     --dark-accent: #360303;
     --dark-shades: #212121;
 }
