--- a/styles/configurationsStyle.css
+++ b/styles/configurationsStyle.css
@@ -23,6 +23,17 @@ html, body{
     display: flex;
 }
 
+/* ESTILOS GERAIS */
+
+h1{
+    padding: 0;
+    text-align: center;
+    font-size: calc(4vmax + 20px);
+    margin-bottom: calc(3vmax + 30px);
+}
+
+/* NAVBAR LATERAL*/
+
 .navbarLateral{
     width: calc(50vw + 50px);
     height: 100vh;
@@ -40,11 +51,16 @@ html, body{
 
 .navbarLateral li{
     cursor: pointer;
-    margin-top: calc(4vmax + 20px) ;
+    margin-top: calc(2vmax + 60px) ;
     border: 1px solid var(--light-accent);
 }
 
+.navbarLateral li:hover{
+    background-color: var(--shades-contrast);
+}
+
 #Principal{
+    padding-left: calc(0.5vmax + 10px); padding-top: calc(0.5vmax + 10px);
     margin-bottom: 5vmax;
     border: transparent;
     margin-top: 0px;
@@ -55,37 +71,26 @@ html, body{
     color: var(--light-shades)
 }
 
-.navbarLateral img{
+.navbarLateral img, #Principal img{
     filter: invert(100%);
 }
 
-.Dark-theme li img{
+.Dark-theme li img, .Dark-theme #Principal img{
     filter: invert(0%)
 }
 
 .navbarLateral img{
     width: calc(1vmax + 10px);
-    filter: invert(100%)
 }
 
-.Aparencia{
-    justify-content: center;
-    width: calc(50vmax - 50px);
-}
-
-h1{
-    padding: 0;
-    text-align: center;
-    font-size: calc(4vmax + 20px);
-    margin-bottom: calc(3vmax + 30px);
-}
+/* CONTEUDO */
 
 .Conteudo{
-    width: 50%;
-    padding: 0vmax 10vmax;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: end;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: calc(2vmax + 10px);
+    gap: 50px;
 }
 
 .Conteudo p{
@@ -93,10 +98,186 @@ h1{
     font-size: calc(1vmax + 10px);
 }
 
+.Conteudo button{
+    width: 100%;
+    text-align: start;
+}
+
+/* SEÇÃO DE APARÊNCIA */
+
+.Aparencia{
+    justify-content: center;
+    width: calc(50vmax - 50px);
+}
+
+/* TOGGLE TEMA */
+
+#ImagemTemaClaro{
+    filter: invert(90%) sepia(91%) saturate(4357%) hue-rotate(354deg) brightness(91%) contrast(95%);
+
+}
+
+#ImagemTemaEscuro{
+    filter: invert(10%) sepia(91%) saturate(4357%) hue-rotate(354deg) brightness(91%) contrast(95%);
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    height: 68px;
+  }
+  
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 52px;
+    width: 52px;
+    left: 4px;
+    bottom: 8px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: var(--main-brand);
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--main-brand);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(52px);
+    -ms-transform: translateX(52px);
+    transform: translateX(52px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+/* SLIDER DE SOM */
+
+.Item{
+    display: flex;
+}
+
+.Item button{
+    width: 50px;
+    margin-right: 15px;
+}
+
+.Item img{
+    width: 50px;
+}
+
+.container{
+    width: 30vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 30px 20px;
+    border-radius: 5px;
+}
+input[type="range"]{
+    position: relative;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    display: block;
+    width: 80%;
+    height: 8px;
+    background-color: #d5d5d5;
+    border-radius: 8px;
+    outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track{
+    -webkit-appearance: none;
+    height: 8px;
+}
+input[type="range"]::-moz-track{
+    -moz-appearance: none;
+    height: 8px;
+}
+input[type="range"]::-ms-track{
+    appearance: none;
+    height: 8px;
+}
+input[type="range"]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: var(--main-brand);
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -6px;
+    border: none;
+}
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color:var(--main-brand);
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -6px;
+    border: none;
+}
+input[type="range"]::-ms-thumb{
+    appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: var(--main-brand);
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -6px;
+    border: none;
+}
+input[type="range"]:active::-webkit-slider-thumb{
+    background-color: #ffffff;
+    border: 3px solid var(--main-brand);
+}
+#slider-value{
+    width: 13%;
+    position: relative;
+    background-color: var(--main-brand);
+    color: #ffffff;
+    text-align: center;
+    font-family: "Roboto Mono",monospace;
+    padding: 10px 0;
+    border-radius: 5px;
+}
+
+/* RESPONSIVIDADE */
+
 @media (max-width: 600px){
     .navbarLateral{
         position: absolute;
         width: 100vw;
+        z-index: 99;
     }
 }
 
