--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -156,7 +156,7 @@ html{
     padding-top: 5%;
     padding-left: 6%;
     padding-right: 6%;
-    font-size: 2.15vmin
+    font-size: calc(1.1vmax + 5px);
 }
 
 
@@ -348,10 +348,11 @@ html{
 }
 
 .postResult{
-    max-height: 80%;
+    max-height: 70%;
     /* margin-bottom: 30px; */
     border-radius: 0.9vmax;
-    font-size: 2.23vmin;
+    font-size: calc(1.5vmax + 2px);
+    overflow: hidden;
 }
 
 
@@ -435,14 +436,14 @@ html{
 /* Melhorar responsibilidade */
 
 /* side deixa de existir */
-@media(max-aspect-ratio: 19/21) or (max-width: 800px){
+@media(max-aspect-ratio: 27/21) or (max-width: 800px){
     #side {
         display: none;
     }
 }
 
 /* consquistas deixa de existir */
-@media(max-aspect-ratio: 3/4) or (max-width: 640px){
+@media(max-aspect-ratio: 11/10) or (max-width: 640px){
     #boxConquistas {
         display: none;
     }
