--- a/styles/configurationsStyle.css
+++ b/styles/configurationsStyle.css
@@ -28,7 +28,7 @@ html, body{
 h1{
     padding: 0;
     text-align: center;
-    font-size: calc(4vmax + 20px);
+    font-size: calc(3vmax + 20px);
     margin-bottom: calc(3vmax + 30px);
 }
 
@@ -67,15 +67,23 @@ h1{
     text-align: start;
 }
 
+#Principal a, #Principal img{
+    transition: font-size 0.55s ease-in-out;
+}
+
+#Principal a:hover, #Principal img:hover + a{
+    font-size: calc(2vmax + 25px);
+}
+
 #Principal a{
     color: var(--light-shades)
 }
 
-.navbarLateral img, #Principal img{
+.navbarLateral img, #Principal img, .TituloMobile img{
     filter: invert(100%);
 }
 
-.Dark-theme li img, .Dark-theme #Principal img{
+.Dark-theme li img, .Dark-theme #Principal img, .Dark-theme .TituloMobile img{
     filter: invert(0%)
 }
 
@@ -103,177 +111,202 @@ h1{
     text-align: start;
 }
 
+.Informações, .Extra, .FAQ, .Sair{
+    display: none;
+}
+
+.TituloMobile{
+    display: none;
+}
+
+.TituloMobile img{
+    width: 30px;
+}
+
+.TituloMobile h1{
+    cursor: pointer;
+}
+
 /* SEÇÃO DE APARÊNCIA */
 
-.Aparencia{
+#Aparencia{
+    border-color: var(--main-brand);
+}
+
+.Aparencia, .Informações, .Extra, .FAQ, .Sair{
     justify-content: center;
-    width: calc(50vmax - 50px);
+    width: calc(50vw - 50px);
 }
 
-/* TOGGLE TEMA */
+    /* TOGGLE TEMA */
 
-#ImagemTemaClaro{
-    filter: invert(90%) sepia(91%) saturate(4357%) hue-rotate(354deg) brightness(91%) contrast(95%);
+    .Image{
+        height: calc(2vmax + 40px); 
+        align-self: center;
+    }
 
-}
+    #ImagemTemaClaro{
+        filter: invert(90%) sepia(91%) saturate(4357%) hue-rotate(354deg) brightness(91%) contrast(95%);
 
-#ImagemTemaEscuro{
-    filter: invert(10%) sepia(91%) saturate(4357%) hue-rotate(354deg) brightness(91%) contrast(95%);
-}
+    }
 
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 120px;
-    height: 68px;
-  }
-  
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 52px;
-    width: 52px;
-    left: 4px;
-    bottom: 8px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: var(--main-brand);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px var(--main-brand);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(52px);
-    -ms-transform: translateX(52px);
-    transform: translateX(52px);
-  }
-  
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+    #ImagemTemaEscuro{
+        filter: invert(10%) sepia(91%) saturate(4357%) hue-rotate(354deg) brightness(91%) contrast(95%);
+    }
 
-/* SLIDER DE SOM */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 120px;
+        height: 68px;
+    }
+    
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+    
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+    
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 52px;
+        width: 52px;
+        left: 4px;
+        bottom: 8px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+    
+    input:checked + .slider {
+        background-color: var(--main-brand);
+    }
+    
+    input:focus + .slider {
+        box-shadow: 0 0 1px var(--main-brand);
+    }
+    
+    input:checked + .slider:before {
+        -webkit-transform: translateX(52px);
+        -ms-transform: translateX(52px);
+        transform: translateX(52px);
+    }
+    
+    .slider.round {
+        border-radius: 34px;
+    }
+    
+    .slider.round:before {
+        border-radius: 50%;
+    }
 
-.Item{
-    display: flex;
-}
+    /* SLIDER DE SOM */
 
-.Item button{
-    width: 50px;
-    margin-right: 15px;
-}
+    .Item{
+        display: flex;
+    }
 
-.Item img{
-    width: 50px;
-}
+    .Item button{
+        width: 50px;
+        margin-right: 15px;
+    }
 
-.container{
-    width: 30vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 30px 20px;
-    border-radius: 5px;
-}
-input[type="range"]{
-    position: relative;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    display: block;
-    width: 80%;
-    height: 8px;
-    background-color: #d5d5d5;
-    border-radius: 8px;
-    outline: none;
-}
-input[type="range"]::-webkit-slider-runnable-track{
-    -webkit-appearance: none;
-    height: 8px;
-}
-input[type="range"]::-moz-track{
-    -moz-appearance: none;
-    height: 8px;
-}
-input[type="range"]::-ms-track{
-    appearance: none;
-    height: 8px;
-}
-input[type="range"]::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    height: 20px;
-    width: 20px;
-    background-color: var(--main-brand);
-    border-radius: 50%;
-    cursor: pointer;
-    margin-top: -6px;
-    border: none;
-}
-input[type="range"]::-moz-range-thumb{
-    -webkit-appearance: none;
-    height: 20px;
-    width: 20px;
-    background-color:var(--main-brand);
-    border-radius: 50%;
-    cursor: pointer;
-    margin-top: -6px;
-    border: none;
-}
-input[type="range"]::-ms-thumb{
-    appearance: none;
-    height: 20px;
-    width: 20px;
-    background-color: var(--main-brand);
-    border-radius: 50%;
-    cursor: pointer;
-    margin-top: -6px;
-    border: none;
-}
-input[type="range"]:active::-webkit-slider-thumb{
-    background-color: #ffffff;
-    border: 3px solid var(--main-brand);
-}
-#slider-value{
-    width: 13%;
-    position: relative;
-    background-color: var(--main-brand);
-    color: #ffffff;
-    text-align: center;
-    font-family: "Roboto Mono",monospace;
-    padding: 10px 0;
-    border-radius: 5px;
-}
+    .Item img{
+        width: 50px;
+    }
+
+    .container{
+        width: calc(30vw + 150px);
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 30px 20px;
+        border-radius: 5px;
+    }
+    input[type="range"]{
+        position: relative;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        display: block;
+        width: 80%;
+        height: 8px;
+        background-color: #d5d5d5;
+        border-radius: 8px;
+        outline: none;
+    }
+    input[type="range"]::-webkit-slider-runnable-track{
+        -webkit-appearance: none;
+        height: 8px;
+    }
+    input[type="range"]::-moz-track{
+        -moz-appearance: none;
+        height: 8px;
+    }
+    input[type="range"]::-ms-track{
+        appearance: none;
+        height: 8px;
+    }
+    input[type="range"]::-webkit-slider-thumb{
+        -webkit-appearance: none;
+        height: 20px;
+        width: 20px;
+        background-color: var(--main-brand);
+        border-radius: 50%;
+        cursor: pointer;
+        margin-top: -6px;
+        border: none;
+    }
+    input[type="range"]::-moz-range-thumb{
+        -webkit-appearance: none;
+        height: 20px;
+        width: 20px;
+        background-color:var(--main-brand);
+        border-radius: 50%;
+        cursor: pointer;
+        margin-top: -6px;
+        border: none;
+    }
+    input[type="range"]::-ms-thumb{
+        appearance: none;
+        height: 20px;
+        width: 20px;
+        background-color: var(--main-brand);
+        border-radius: 50%;
+        cursor: pointer;
+        margin-top: -6px;
+        border: none;
+    }
+    input[type="range"]:active::-webkit-slider-thumb{
+        background-color: #ffffff;
+        border: 3px solid var(--main-brand);
+    }
+    #slider-value{
+        width: 13%;
+        position: relative;
+        background-color: var(--main-brand);
+        color: #ffffff;
+        text-align: center;
+        font-family: "Roboto Mono",monospace;
+        padding: 10px 0;
+        border-radius: 5px;
+    }
 
 /* RESPONSIVIDADE */
 
-@media (max-width: 600px){
+@media (max-width: 900px){
     .navbarLateral{
         position: absolute;
         width: 100vw;
