--- a/public/styles/appStyle.css
+++ b/public/styles/appStyle.css
@@ -11,6 +11,16 @@ body{
     overflow-y: hidden;
 }
 
+/* INVERSÃO DE IMAGENS */
+
+#drafts, #botões button, #report img, .Dark-theme .curtidas img{
+    filter: invert(100%);
+}
+
+.Dark-theme #drafts, .Dark-theme #botões button, .Dark-theme #report img{
+    filter: invert(0%);
+}
+
 
 /* HEADER */
 
@@ -126,6 +136,130 @@ header{
     padding: 2%;
 }
 
+/* LOGIN */
+
+#box{
+    background-color: var(--shades-contrast);
+    position: absolute;
+    width: calc(35vw + 50px);
+    height: calc(40vh + 50px);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    border-radius: 20px;
+    z-index: 9999999;
+    color: var(--light-shades)
+}
+
+@media (max-width: 800px) {
+    #box{
+        width: 80vw;
+        height: 60vh;
+    }
+}
+
+#box *{
+    margin: 15px;
+    padding: 5px;
+}
+
+#box #submitInput,#resetInput{
+    background-color: var(--main-brand);
+    border-radius: 10px;
+    border: 0px solid;
+    width: 180px;
+    height: 50px;
+    font-size: 15px;
+    transition:  all 0.2s ease-in-out;
+}
+
+#submitInput:hover,#resetInput:hover{
+    scale: 1.05;
+}
+
+#submitInput, #resetInput{
+    color: white;
+    cursor: pointer;
+}
+
+#box #resetInput{
+    width: 70px;
+    height: 30px;
+    font-size: 12px;
+}
+
+#box #emailInput, #passwordInput{
+    border-radius: 5px;
+    border: 0px solid;
+}
+
+#box #emailInput:invalid, #passwordInput:invalid{
+    border: 2px solid red;
+}
+
+#box #emailInput:valid, #passwordInput:valid{
+    border: 2px solid green;
+}
+
+#exitLogin{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0px solid;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    font-weight: bolder;
+}
+
+#exitLogin:hover{
+    scale: 1.3;
+    color: var(--main-brand);
+}
+
+/* BOXES */
+
+.confirmarDenuncia{
+    width: 100%;
+    display: none;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    height: calc(30vh + 50px);
+}
+
+.confirmarDenuncia h1{
+    font-size: calc(1vmax + 20px);
+}
+
+.confirmarDenuncia p{
+    font-size: calc(0.5vmax + 10px);
+}
+
+.confirmarDenuncia #ConfirmarButton, .confirmarDenuncia #RetornarButton{
+    border-radius: 10px;
+    border: 0px solid;
+    font-size: 15px;
+    height: 50px;
+    transition: all 0.2s ease-in-out;
+}
+
+.confirmarDenuncia #ConfirmarButton:hover, .confirmarDenuncia #RetornarButton:hover{
+    scale: 1.05;
+}
+
+.confirmarDenuncia #ConfirmarButton{
+    color: white;
+    background-color: var(--main-brand);
+}
+
+.confirmarDenuncia #RetornarButton{
+    color: var(--main-brand);
+    background-color: white;
+    border: 1px solid var(--main-brand)
+}
+
 /* CONTEUDO DA PÁGINA */
 
 #pageContent{
@@ -187,13 +321,57 @@ header{
     color: var(--main-brand);
 }
 
-.postResult div{
+.postResult .capa{
+    background-image: url('https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg');
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center center; 
-    height: 15vmax
+    height: calc(15vmax + 50px);
 }
 
+.interações{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    position: absolute;
+    padding: 1% 2% 1% 1%;
+    background-color: var(--light-shades);
+    border-radius: 0px 0px 50px 0px;
+}
+
+.interações button{
+    border-radius: 50px;
+    transition: all 0.2s ease-in-out;
+}
+
+.curtidas{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+}
+
+#quantasCurtidas{
+    grid-row: span 2;
+    margin-right: 5px;
+    font-size: calc(0.5vmax + 10px);
+    color: var(--dark-shades);
+}
+
+#report{
+    width: 70%;
+}
+
+#like:hover{
+    background-color: green;
+}
+
+#report:hover, #dislike:hover{
+    background-color: red;
+}
+
+.interações img{
+    width: calc(1vmax + 20px);
+    padding: 5%;
+}
 
 /* CONTEÚDO - RANKS*/
 
@@ -213,10 +391,6 @@ header{
     width: 50px;
 }
 
-#drafts, #botões button{
-    filter: invert(100%);
-}
-
 #buttonDrafts{
     background-color: var(--main-brand);
     padding: 20px;
@@ -226,10 +400,6 @@ header{
     bottom: 50px;
     border-radius: 20px;
     transition: 0.3s ease-in-out;
-}
-
-.Dark-theme #drafts, .Dark-theme #botões button {
-    filter: invert(0%);
 }
 
 #buttonDrafts:hover{scale: 0.9;}
