--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -314,32 +314,49 @@ html{
     background-color: var(--main-brand);
     width: -webkit-fill-available;
     /* height: 100%; */
+    
+    margin-right: 2.2%;
+    margin-left: 2.2%;
 
+    border-radius: 2vmax 2vmax 0 0;
+
+    display: flex;
+    flex-direction: column;
+}
+
+
+#posts::-webkit-scrollbar { /* corrigir scroll bar aqui e la em baixo*/
+    width: 11px;
+}
+
+
+#posts::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+}
+
+/*  */
+
+#contentButtons{
+    background-color: white;
+    border-radius: 2vmax 2vmax 0 0;
+    width: 100%;
+    height: 10%;
+}
+
+#posts{
+    width: -webkit-fill-available;
+
+    gap: 6.8%;
+    padding: 3%;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
     word-wrap: break-word;
-
-    padding: 3%;
-    margin-right: 2.2%;
-    margin-left: 2.2%;
-
-    gap: 6.8%;
-
-    border-radius: 2vmax 2vmax 0 0;
 }
 
-
-#boxPosts::-webkit-scrollbar { /* corrigir scroll bar aqui e la em baixo*/
-    width: 11px;
-}
-
-
-#boxPosts::-webkit-scrollbar-thumb {
-    background-color: rgb(0, 0, 0);
-    border-radius: 10px;
-}
+/*  */
 
 .postResult{
     max-height: 70%;
