--- a/public/styles/estiloUser.css
+++ b/public/styles/estiloUser.css
@@ -339,12 +339,30 @@ html{
 
 /*  */
 
-#contentButtons{
-    background-color: white;
+#divContentButtons{
     border-radius: 2vmax 2vmax 0 0;
     width: 100%;
-    height: 10%;
+    height: 6.5vh;
+    display: flex;
+    justify-content: space-evenly;
+
+    border-bottom: 1px var(--dark-shades);
 }
+
+.contentButton{
+    background-color: var(--transparent-brand);
+    color: var(--dark-shades);
+    height: 100%;
+    width: -webkit-fill-available;
+}
+
+#cbPosts{
+    /* background-color: transparent; */
+}
+
+
+
+/*  */
 
 #posts{
     width: -webkit-fill-available;
@@ -364,7 +382,7 @@ html{
     max-height: 70%;
     /* margin-bottom: 30px; */
     border-radius: 0.9vmax;
-    font-size: calc(1.5vmax + 2px);
+    font-size: calc(1.4vmax + 2px);
     overflow: hidden;
 }
 
