--- a/public/styles/estiloUser.css
+++ b/public/styles/estiloUser.css
@@ -327,12 +327,12 @@ html{
 }
 
 
-#posts::-webkit-scrollbar { /* corrigir scroll bar aqui e la em baixo*/
+#boxCbPosts::-webkit-scrollbar { /* corrigir scroll bar aqui e la em baixo*/
     width: 11px;
 }
 
 
-#posts::-webkit-scrollbar-thumb {
+#boxCbPosts::-webkit-scrollbar-thumb {
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
 }
@@ -341,30 +341,49 @@ html{
 
 #divContentButtons{
     border-radius: 2vmax 2vmax 0 0;
+    overflow: hidden;
     width: 100%;
     height: 6.5vh;
     display: flex;
     justify-content: space-evenly;
 
     border-bottom: 1px var(--dark-shades);
+
+    /* display: none; */
 }
+
+/* parte dos botões */
 
 .contentButton{
     background-color: var(--transparent-brand);
     color: var(--dark-shades);
     height: 100%;
     width: -webkit-fill-available;
+
+    /* display: none; */
 }
 
-#cbPosts{
-    /* background-color: transparent; */
+#CbPosts{
+    background-color: transparent;
 }
 
+/* parte do conteúdo */
 
+#boxCbPosts{
+}
+
+#boxCbPessoal{
+    display: none;
+
+}
+
+#boxCbConquistas{
+    display: none;
+}
 
 /*  */
 
-#posts{
+#boxCbPosts{
     width: -webkit-fill-available;
 
     gap: 6.8%;
