--- a/public/styles/configurationsStyle.css
+++ b/public/styles/configurationsStyle.css
@@ -313,6 +313,8 @@ h1{
     margin-left: 5%; margin-right: 5%;
     border-radius: 100%;
     border: 2px solid white;
+    aspect-ratio: 1/1;
+    object-fit: cover;
 }
 
 
