--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -165,9 +165,10 @@ font-size: calc(1vmax + 15px);
   background-color: var(--shades-contrast);
   color: var(--light-shades);
   text-align: center;
-  padding: 10vmax 5vmax;
+  padding: 5vmax 5vmax;
   display: grid;
   grid-template-columns: repeat(2, 3fr);
+  align-items: center;
 }
 
 .sobre h1, .equipe h1{
@@ -180,7 +181,7 @@ font-size: calc(0.6vmax + 10px);
 
 #ImagemCentral{
   margin-left:  10vw;
-  width: calc(10vmax + 60px);
+  width: calc(15vmax + 60px);
   margin: auto;
   }
 
