--- a/public/styles/styleGenerico.css
+++ b/public/styles/styleGenerico.css
@@ -35,9 +35,30 @@ html, body{
 .postResult p{
   font-size: calc(0.5vmax + 10px);
 }
+.postResult a{
+  font-style: italic;
+  font-weight: 600;
+}
 
-.postResult #semCapa{
-  padding-left: 8vmax; padding-right: 6vmax;
+.semCapa{
+  width: 85%;
+  min-height: calc(5vmax + 100px);
+  float: right;
+  border-left: 1px solid red;
+}
+
+@media (max-width: 400px){
+  .semCapa{
+    width: 70%;
+    min-height: calc(5vmax + 150px);
+  }
+  .postResult{
+    min-height: calc(5vmax + 150px);;
+  }
+}
+
+.semCapa p, .semCapa h1, .semCapa .in{
+  padding-left: 2%;
 }
 
 .postResult h1{
@@ -68,6 +89,7 @@ html, body{
   padding: 1% 2% 1% 1%;
   background-color: var(--light-shades);
   border-radius: 0px 0px 50px 0px;
+  min-width: 10%;
 }
 
 .interações button{
@@ -122,6 +144,14 @@ html, body{
 
 .Dark-theme .IconeMenuImg{
   filter: invert(100%) !important;
+}
+
+.Dark-theme #drafts, .Dark-theme #botões button, .Dark-theme #report img{
+  filter: invert(0%);
+}
+
+#drafts, #report img, .Dark-theme .curtidas img{
+  filter: invert(100%);
 }
 
 /* MUDANÇA DE IMAGENS NO DARK-THEME */
